--- a/Bilverkstad1/App.xaml
+++ b/Bilverkstad1/App.xaml
@@ -42,7 +42,7 @@
 
         <Style x:Key="TextBoxInput"  TargetType="TextBox">
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="Beige"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Height" Value="20"/>
             <Setter Property="FontSize" Value="13"/>
@@ -197,7 +197,7 @@
         <Style x:Key="DataGridColumnHeaderStyle1" TargetType="{x:Type DataGridColumnHeader}">
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#69717d"/>
+            <Setter Property="Foreground" Value="Beige"/>
             <Setter Property="Margin" Value="15 0 15 0"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -214,7 +214,8 @@
             </Setter>
         </Style>
         <Style x:Key="DataGridRowStyle1" TargetType="{x:Type DataGridRow}">
-            <Setter Property="Background" Value="White"/>
+            <Setter Property="Background" Value="#FFDFD2E2"/>
+
             <Setter Property="Margin" Value="0 4 0 0"/>
             <Setter Property="SnapsToDevicePixels" Value="true"/>
             <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
@@ -254,32 +255,24 @@
         </Style>
         
         <Style x:Key="TextBoxSearch" TargetType="TextBox">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#FF0A0745"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Padding" Value="40"/>
-            <Setter Property="FontSize" Value="13"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="TextBoxBase">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="10" BorderThickness="1"
-                                BorderBrush="Gray">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseCaptured" Value="True">
-                                <Setter Property="BorderBrush" Value="Red"/>
-                            </Trigger>
-                            <Trigger Property="IsKeyboardFocused" Value="True">
-                                <Setter Property="BorderBrush" Value="Orange"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-           
-        </Style>
+             <Setter Property="Template">
+             <Setter.Value>
+                 <ControlTemplate TargetType="TextBox">
+                     <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="2"
+                        CornerRadius="10">
+                     <ScrollViewer Margin="10 0 0 0" x:Name="PART_ContentHost" />
+                     </Border>
+                 </ControlTemplate>
+            </Setter.Value>
+             </Setter>
+         <Setter Property="Background" Value="Transparent"/>
+         <Setter Property="Foreground" Value="White"/>
+         <Setter Property="FontSize" Value="11"/>
+         <Setter Property="VerticalAlignment" Value="Center"/>
+</Style>
+
 
 
 
