--- a/Bilverkstad1/PresentationLager/ReservDelVy.xaml
+++ b/Bilverkstad1/PresentationLager/ReservDelVy.xaml
@@ -42,24 +42,24 @@
 
             <Grid>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="31"/>
-                    <RowDefinition Height="119"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <TextBlock Text="ReservDel Manager"
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="31"/>
+                        <RowDefinition Height="119"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="ReservDel Manager"
                            Foreground="DarkGray"
                            FontSize="12"
                            FontFamily="Montserrat"
                            Grid.Column="0"
                            VerticalAlignment="Center"
                            Margin="10,0,0,0" Height="14"/>
-                <Button x:Name="BtnMinimize"
+                    <Button x:Name="BtnMinimize"
                         BorderThickness="0"
                         Content="-"
                         Foreground="White"
@@ -71,18 +71,18 @@
                         >
 
 
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Width="18" Height="18"
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="18" Height="18"
                                     CornerRadius="9"
                                     Background= "#FF13A4B8">
-                                <ContentPresenter VerticalAlignment="Center"
+                                    <ContentPresenter VerticalAlignment="Center"
                                   HorizontalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
-                <Button  x:Name="BtnClose"
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                    <Button  x:Name="BtnClose"
                         BorderThickness="0"
                         Content="X"
                         Foreground="White"
@@ -91,129 +91,129 @@
                         Click="BtnClose_Click" 
                         Background="#FF953707" Margin="750,2,-600,3" >
 
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Width="18" Height="18"
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="18" Height="18"
                                     CornerRadius="9"
                                     Background="#FF953707">
-                                <ContentPresenter VerticalAlignment="Center"
+                                    <ContentPresenter VerticalAlignment="Center"
                                 HorizontalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                   
-
-                </Button>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
 
 
-                <Border Grid.Row="2" CornerRadius="0 50 0 0">
-                    <DockPanel>
-                        <StackPanel DockPanel.Dock="Top">
-                            <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0"
+                    </Button>
+
+
+                    <Border Grid.Row="2" CornerRadius="0 50 0 0">
+                        <DockPanel>
+                            <StackPanel DockPanel.Dock="Top">
+                                <Button Style="{StaticResource ButtonMenu}" Margin="30,50,30,0"
                                      Content="Ny Reservdel" Click="BtnNyReservdel_Click"  FontSize="12" >
-                                <Button.Effect>
-                                    <DropShadowEffect Opacity="0.2" Direction="270" ShadowDepth="1" Color="#FF272727"/>
-                                </Button.Effect>
-                            </Button>
-                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
+                                    <Button.Effect>
+                                        <DropShadowEffect Opacity="0.2" Direction="270" ShadowDepth="1" Color="#FF272727"/>
+                                    </Button.Effect>
+                                </Button>
+                                <Button Style="{StaticResource ButtonMenu}" Margin="30,30,30,0"
                                     Content="Uppdatera" Click="BtnUppdatera_Click"  FontSize="12" >
-                                <Button.Effect>
-                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
-                                </Button.Effect>
-                            </Button>
-                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
+                                    <Button.Effect>
+                                        <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                    </Button.Effect>
+                                </Button>
+                                <Button Style="{StaticResource ButtonMenu}" Margin="30,30,30,0"
                                     Content="Spara" Click="BtnSpara_Click"  FontSize="12" >
-                                <Button.Effect>
-                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
-                                </Button.Effect>
-                            </Button>
+                                    <Button.Effect>
+                                        <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                    </Button.Effect>
+                                </Button>
 
 
-                        </StackPanel>
-                    </DockPanel>
+                            </StackPanel>
+                        </DockPanel>
 
-                </Border>
-                <Image Source="/Images/121212-rem.png" Height="92"
+                    </Border>
+                    <Image Source="/Images/121212-rem.png" Height="92"
                            Width="200" Opacity="0.6"
                         HorizontalAlignment="Left" 
                                         Margin="10,10,0,0" 
                     Grid.Row="1" 
                     VerticalAlignment="Top" 
                    />
-            </Grid>
-            <!--Main Section-->
-            <Grid Grid.Column="1" Margin="0,0,-5,0">
+                </Grid>
+                <!--Main Section-->
+                <Grid Grid.Column="1" Margin="0,0,-5,0">
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="29*"/>
-                    <RowDefinition Height="auto" MinHeight="150"/>
-                    <RowDefinition Height="196*"/>
-                </Grid.RowDefinitions>
-                <!--text Search-->
-                <Grid Grid.Row="1" Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="29*"/>
+                        <RowDefinition Height="auto" MinHeight="150"/>
+                        <RowDefinition Height="196*"/>
+                    </Grid.RowDefinitions>
+                    <!--text Search-->
+                    <Grid Grid.Row="1" Grid.Column="1">
 
-                    <TextBlock 
-                               VerticalAlignment="Top" 
-                               Foreground="Gray"
-                               IsHitTestVisible="False" 
-                                Visibility="Visible" Margin="476,11,0,0">
-                                <Run Text="Search here"/><Run Language="sv-se" Text=" "/><Run Text="..."/>
-                    </TextBlock>
-                    <TextBox Style="{StaticResource TextBoxSearch}" 
-                             x:Name="txtSearch" Height="18" 
-                             Margin="464,10,10,0" VerticalAlignment="Top" TextChanged="txtSearch_TextChanged" />
-                    <Label Content="Namn" 
+
+                        <TextBox  Style="{StaticResource TextBoxSearch}"
+                             x:Name="txtSearch" Height="20" 
+                             Margin="470,10,10,0" VerticalAlignment="Top" TextChanged="txtSearch_TextChanged"  />
+                        <Label Content="Namn" 
                            HorizontalAlignment="Left" 
-                           Height="24" Margin="10,52,0,0" 
-                           VerticalAlignment="Top" 
-                           Width="101"/>
-                    <TextBox Style="{StaticResource TextBoxInput}" 
+                           Height="24" Margin="10,0,0,0" 
+                           VerticalAlignment="Center" 
+                           Width="101" 
+                           Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"/>
+                        <TextBox Style="{StaticResource TextBoxInput}" 
                             
                              x:Name="Namn"
                              HorizontalAlignment="Left" 
-                             Margin="145,58,0,0" 
+                             Margin="126,58,0,0" 
                              VerticalAlignment="Top" 
                             />
-                    <Label Content="Pris" HorizontalAlignment="Left" Height="24" Margin="333,54,0,0" VerticalAlignment="Top" Width="61"/>
-                    <TextBox Style="{StaticResource TextBoxInput}" 
+                        <Label Content="Pris"
+                           Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"
+                           HorizontalAlignment="Left" Height="24" Margin="330,60,0,0" VerticalAlignment="Top" Width="61"/>
+                        <TextBox Style="{StaticResource TextBoxInput}" 
                            
                              x:Name="Kvantitet"
                              HorizontalAlignment="Left" 
-                             Margin="145,110,0,0" 
+                             Margin="126,100,0,0" 
                              VerticalAlignment="Top" />
-                    <TextBox Style="{StaticResource TextBoxInput}" 
+                        <TextBox Style="{StaticResource TextBoxInput}" 
                             
                              x:Name="Pris"
                              HorizontalAlignment="Left" 
                              Height="16" 
-                             Margin="424,52,0,0" 
+                             Margin="414,60,0,0" 
                              VerticalAlignment="Top"/>
-                    <Label Content="kvantitet" HorizontalAlignment="Left" Height="35" Margin="14,102,0,0" VerticalAlignment="Top" Width="92"/>
+                        <Label Content="kvantitet" 
+                           HorizontalAlignment="Left" 
+                           Height="35" 
+                           Foreground="#FFEAC4EE" FontWeight="Bold" 
+                           FontStyle="Italic"
+                           Margin="14,102,0,0" 
+                           VerticalAlignment="Top" 
+                           Width="92"/>
+                        <Label Content="Söka"
+                        Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"
+                        HorizontalAlignment="Left" Height="24" Margin="424,8,0,0" VerticalAlignment="Top" Width="41"/>
 
-                </Grid>
-                <DataGrid x:Name="ReservDelDataGrid"
+                    </Grid>
+                    <DataGrid x:Name="ReservDelDataGrid"
                           Style="{DynamicResource DataGridStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                           RowStyle="{DynamicResource DataGridRowStyle1}" 
                           Grid.Row="2" Margin="0,0,10,0" SelectionChanged="ReservDelDataGrid_SelectionChanged_1">
-                    <DataGrid.Columns>
-                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto" >
-                            <DataGridCheckBoxColumn.HeaderTemplate>
-                                <DataTemplate>
-                                    <CheckBox/>
-                                </DataTemplate>
-                            </DataGridCheckBoxColumn.HeaderTemplate>
-                        </DataGridCheckBoxColumn>
-                        
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="" Width="auto" Binding="{Binding Name}" />
 
-                    </DataGrid.Columns>
+                        </DataGrid.Columns>
 
 
-                </DataGrid>
+                    </DataGrid>
 
 
-            </Grid>
+                </Grid>
 
 
 
